force-app/main/default/objects/ERA_Classification_Code__c/ERA_Classification_Code__c.object-meta.xml
<CustomObject>
    <label>ERA Classification Code</label>
    <nameField>
        <displayFormat>ERA-{00000}</displayFormat>
        <label>ERA Classification Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERA Classification Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>