force-app/main/default/objects/ERA_Classification_Code__c/fields/I_RS_Disable_Grid_Validation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Disable_Grid_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn off certain validations for this specific record. Useful for specific data manipulations.</description>
    <label>Disable Grid Validation</label>
    <type>Checkbox</type>
</CustomField>