force-app/main/default/objects/ERA_Classification_Code__c/fields/I_RS_Inactive_for_Non_Admins__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Inactive_for_Non_Admins__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies a soft-delete</description>
    <inlineHelpText>This record is excluded from reporting and code-editing screens.</inlineHelpText>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>