force-app/main/default/objects/ERA_Classification_Code__c/fields/I_RS_Nominated_for_peer_review__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Nominated_for_peer_review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates that an output has been nominated to be part of the sample put forward for peer review. The output will be counted towards the 30% for that document type that must be nominated for peer review in each field.</inlineHelpText>
    <label>Nominated for peer review</label>
    <type>Checkbox</type>
</CustomField>