force-app/main/default/objects/ERA_Classification_Code__c/fields/I_RS_Ranking__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ranking__c</fullName>
    <description>Valid range is between 0-100, but we are relying on validation rule to provide more descriptive message</description>
    <label>Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>