force-app/main/default/objects/ERA_Classification_Code__c/fields/I_RS_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>All ERA FoR Codes</relationshipLabel>
    <relationshipName>ERA_Classification_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>