force-app/main/default/objects/ERA_Classification_Code__c/recordTypes/I_RS_Research_Output.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Research_Output</fullName>
    <active>true</active>
    <label>Research Output</label>
</RecordType>