force-app/main/default/objects/ERA_Classification_Code__c/recordTypes/I_RS_Researcher.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Researcher</fullName>
    <active>true</active>
    <label>Researcher</label>
</RecordType>