force-app/main/default/objects/ERA_Classification_Code__c/validationRules/Classification_Master_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Classification_Master_is_Mandatory</fullName>
    <active>true</active>
    <description>Classification Code lookup is mandatory.</description>
    <errorConditionFormula>ISBLANK(I_RS_Classification_Master__c)</errorConditionFormula>
    <errorDisplayField>I_RS_Classification_Master__c</errorDisplayField>
    <errorMessage>Classification Master is mandatory</errorMessage>
</ValidationRule>