force-app/main/default/objects/ERA_Classification_Code__c/validationRules/Minimum_Percentage_Amount_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Percentage_Amount_20</fullName>
    <active>true</active>
    <description>Enforce scenarios where minimum allowed percentage is 20%</description>
    <errorConditionFormula>!I_RS_Disable_Grid_Validation__c &amp;&amp;
!ISBLANK(I_RS_Research_Output__c) &amp;&amp; 
I_RS_Percentage__c &lt; 0.2</errorConditionFormula>
    <errorDisplayField>I_RS_Percentage__c</errorDisplayField>
    <errorMessage>The minimum allowed percentage is 20%</errorMessage>
</ValidationRule>